manifests/log-output-ping-pong/pingpong-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong
  namespace: pingpong-logoutput
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pong
  template:
    metadata:
      labels:
        app: pong
    spec:
      containers:
      - name: pingpong
        image: astranero/pingpong:2.07.05
        imagePullPolicy: Always
        readinessProbe:
          initialDelaySeconds: 10
          periodSeconds: 5
          httpGet:
            path: /healthz
            port: 3541
        ports:
        - containerPort: 8081
        resources:
          limits:
            cpu: "150m"
            memory: "200Mi"
