manifests/log-output-ping-pong/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: logoutput-svc
  namespace: pingpong-logoutput
  annotations:
    cloud.google.com/backend-config: '{"default": "logoutput-backendconfig"}'

spec:
  selector:
    app:  logoutput
  type:  NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort:  8080
---
kind: Service
apiVersion: v1
metadata:
  name: pong-svc
  namespace: pingpong-logoutput
  annotations:
    cloud.google.com/backend-config: '{"default": "logoutput-backendconfig"}'
spec:
  selector:
    app:  pong
  type:  NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort:  8081
